# openGL-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Yoba Engine.sln
res/models/: cube.txt
res/shaders/: fragment_shader.txt
src/: Yoba Engine.vcxproj  Yoba Engine.vcxproj.filters  camera.c  camera.h  draw_model.c  draw_model.h  engine.h  event.c  event.h  game.c  game.h  keyboard.c  keyboard.h  main.c  mouse.c  mouse.h  packages.config  shader.c  shader.h  texture.c  texture.h  util.c  util.h  window.c  window.h
src/engine/: engine.h  engine_common.h
src/engine/core/: camera.c  camera.h  engine_close.c  engine_close.h  engine_init.c  engine_init.h
src/engine/events/: close_window.c  close_window.h
src/engine/input/: keyboard.c  keyboard.h  mouse.h
src/engine/meshes/: cube.c  cube.h
src/engine/render/: shader.c  shader.h  texture.c  texture.h  update.c  update.h  window.c  window.h
src/model/: cube.c  model.h  obj.c
